# haskell-happstack

./: .gitignore  README.md  buildorder  cblrepo.db  clean.sh  find-dup.sh  genrepo.sh  makeahpkg  pkgbuild.sh  removable.sh  sync.sh  updates.sh
contrib/: upstream-cblrepo.sh
patches/: HsOpenSSL.pkgbuild  acid-state-tls.cabal  clckwrks-plugin-bugs.cabal  clckwrks-plugin-bugs.pkgbuild  clckwrks-plugin-ircbot.cabal  clckwrks-plugin-ircbot.pkgbuild  clckwrks-plugin-media.cabal  clckwrks-plugin-media.pkgbuild  clckwrks-plugin-page.cabal  clckwrks-plugin-page.pkgbuild  clckwrks-theme-bootstrap.pkgbuild  clckwrks.cabal  clckwrks.pkgbuild  crypto-numbers.source  fb.cabal  fb.source  gd.pkgbuild  gitit.cabal  gitit.install  gitit.pkgbuild  gitit.source  happstack-authenticate.cabal  happstack-clientsession.cabal  happstack-clientsession.source  happstack-hamlet.cabal  happstack-hsp.cabal  happstack-hsp.pkgbuild  happstack-hstringtemplate.cabal  happstack-server-tls.cabal  happstack-server-tls.pkgbuild  happstack-server.cabal  happstack-server.source  harp.source  haskell-src-meta.cabal  hoauth2.cabal  ircbot.cabal  language-ecmascript.source  lens.cabal  lens.pkgbuild  magic.pkgbuild  (+21 more)
