Index: haskell-happstack/acid-state-tls.cabal
===================================================================
--- haskell-happstack.orig/acid-state-tls.cabal
+++ haskell-happstack/acid-state-tls.cabal
@@ -30,7 +30,7 @@ Library
                        base       >= 4   && < 5,
                        directory            < 1.3,
                        HsOpenSSL            < 0.11,
-                       network              < 2.5,
+                       network              < 2.6,
                        safecopy   >= 0.6 && < 0.9
 
   GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds
