Index: haskell-happstack/acid-state-tls.cabal
===================================================================
--- haskell-happstack.orig/acid-state-tls.cabal
+++ haskell-happstack/acid-state-tls.cabal
@@ -29,7 +29,7 @@ Library
   Build-depends:       acid-state >= 0.9 && < 0.13,
                        base       >= 4   && < 5,
                        directory            < 1.3,
-                       HsOpenSSL            < 0.11,
+                       HsOpenSSL            < 0.12,
                        network              < 2.6,
                        safecopy   >= 0.6 && < 0.9
 
