Index: haskell-happstack/acid-state-tls.cabal
===================================================================
--- haskell-happstack.orig/acid-state-tls.cabal
+++ haskell-happstack/acid-state-tls.cabal
@@ -29,8 +29,8 @@ Library
   Build-depends:       acid-state >= 0.9 && < 0.13,
                        base       >= 4   && < 5,
                        directory            < 1.3,
-                       HsOpenSSL            < 0.11,
-                       network              < 2.6,
+                       HsOpenSSL            < 0.12,
+                       network              < 2.7,
                        safecopy   >= 0.6 && < 0.9
 
   GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds
