Index: haskell-happstack/clckwrks-plugin-ircbot.cabal
===================================================================
--- haskell-happstack.orig/clckwrks-plugin-ircbot.cabal
+++ haskell-happstack/clckwrks-plugin-ircbot.cabal
@@ -43,7 +43,7 @@ Library
     acid-state             >= 0.12 && < 0.13,
     attoparsec             == 0.10.*,
     blaze-html             >= 0.5 && < 0.7,
-    clckwrks               >= 0.18 && < 0.20,
+    clckwrks               >= 0.18 && < 0.21,
     containers             >= 0.4 && < 0.6,
     directory              >= 1.1 && < 1.3,
     filepath               >= 1.2 && < 1.4,
