Index: haskell-happstack/clckwrks-plugin-page.cabal
===================================================================
--- haskell-happstack.orig/clckwrks-plugin-page.cabal
+++ haskell-happstack/clckwrks-plugin-page.cabal
@@ -41,7 +41,7 @@ library
   build-depends:       base                   >= 4.3 && < 4.7,
                        aeson                  == 0.6.*,
                        acid-state             == 0.12.*,
-                       attoparsec             == 0.10.*,
+                       attoparsec             >= 0.10 && < 0.12,
                        clckwrks               >= 0.21 && < 0.22,
                        containers             >= 0.4 && < 0.6,
                        directory              >= 1.1 && < 1.3,
