Index: haskell-happstack/clckwrks.cabal
===================================================================
--- haskell-happstack.orig/clckwrks.cabal
+++ haskell-happstack/clckwrks.cabal
@@ -95,7 +95,7 @@ Library
      tagsoup                      >= 0.12 && < 0.14,
      text                         == 0.11.*,
      time                         >= 1.2 && <1.5,
-     uuid                         == 1.2.*,
+     uuid                         >= 1.2 && < 1.4,
      unordered-containers         >= 0.1 && < 0.3,
      utf8-string                  == 0.3.*,
      vector                       >= 0.9,
