Index: haskell-happstack/clckwrks.cabal
===================================================================
--- haskell-happstack.orig/clckwrks.cabal
+++ haskell-happstack/clckwrks.cabal
@@ -63,8 +63,6 @@ Library
                    Clckwrks.URL
                    Paths_clckwrks
   Extra-Libraries:   ssl
-  if !os(darwin)
-      Extra-Libraries: cryptopp
 
   Build-depends:
      acid-state                   >= 0.12 && < 0.13,
