Index: haskell-happstack/fb.cabal
===================================================================
--- haskell-happstack.orig/fb.cabal
+++ haskell-happstack/fb.cabal
@@ -65,7 +65,7 @@ library
       base                 >= 4       && < 5
     , lifted-base          >= 0.1     && < 0.3
     , bytestring           >= 0.9     && < 0.11
-    , text                 == 0.11.*
+    , text                 >= 0.11    && < 1.1
     , transformers         >= 0.2     && < 0.4
     , transformers-base
     , monad-control
@@ -73,8 +73,8 @@ library
     , conduit              == 1.0.*
     , data-default
     , http-types
-    , http-conduit         == 1.9.*
-    , attoparsec           == 0.10.*
+    , http-conduit         == 2.0.*
+    , attoparsec           >= 0.10    && < 0.12
     , attoparsec-conduit   == 1.0.*
     , unordered-containers
     , aeson                >= 0.5     && < 0.7
@@ -83,7 +83,7 @@ library
     , time                 >= 1.2     && < 1.5
     , old-locale
     , cereal               >= 0.3     && < 0.5
-    , crypto-api           >= 0.11    && < 0.13
+    , crypto-api           >= 0.11    && < 0.14
     , cryptohash           >= 0.7
     , cryptohash-cryptoapi == 0.1.*
     , monad-logger         >= 0.3
