Index: haskell-happstack/gitit.cabal
===================================================================
--- haskell-happstack.orig/gitit.cabal
+++ haskell-happstack/gitit.cabal
@@ -170,7 +170,7 @@ Library
                      hoauth2 >= 0.4.2 && < 0.5,
                      http-conduit >= 2.1.4 && < 2.2,
                      http-client-tls >= 0.2.2 && < 0.3,
-                     aeson >= 0.7 && < 0.10,
+                     aeson >= 0.7 && < 0.11,
                      uuid >= 1.3 && < 1.4
   if impl(ghc >= 6.10)
     build-depends:   base >= 4, syb
