Index: haskell-happstack/gitit.cabal
===================================================================
--- haskell-happstack.orig/gitit.cabal
+++ haskell-happstack/gitit.cabal
@@ -139,15 +139,15 @@ Library
                      directory,
                      mtl,
                      old-time,
-                     pandoc >= 1.12.4 && < 1.16,
-                     pandoc-types >= 1.12.3 && < 1.13,
+                     pandoc >= 1.12.4 && < 1.17,
+                     pandoc-types >= 1.12.3 && < 1.17,
                      highlighting-kate >= 0.5.0.1 && < 0.7,
                      bytestring,
                      text,
                      random,
                      utf8-string >= 0.3 && < 1.1,
                      SHA > 1 && < 1.7,
-                     HTTP >= 4000.0 && < 4000.3,
+                     HTTP >= 4000.0 && < 4000.4,
                      HStringTemplate >= 0.6 && < 0.9,
                      old-locale >= 1,
                      time >= 1.1 && < 1.6,
@@ -167,10 +167,10 @@ Library
                      json >= 0.4 && < 0.10,
                      uri >= 0.1 && < 0.2,
                      split,
-                     hoauth2 >= 0.4.2 && < 0.5,
+                     hoauth2 >= 0.4.2 && < 0.6,
                      http-conduit >= 2.1.4 && < 2.2,
                      http-client-tls >= 0.2.2 && < 0.3,
-                     aeson >= 0.7 && < 0.10,
+                     aeson >= 0.7 && < 0.11,
                      uuid >= 1.3 && < 1.4
   if impl(ghc >= 6.10)
     build-depends:   base >= 4, syb
