Index: haskell-happstack/happstack-authenticate.cabal
===================================================================
--- haskell-happstack.orig/happstack-authenticate.cabal
+++ haskell-happstack/happstack-authenticate.cabal
@@ -43,7 +43,7 @@ Library
 
   Build-depends:       base                         > 4     && < 5,
                        acid-state                   >= 0.6  && < 0.14,
-                       aeson                        >= 0.4  && < 0.9,
+                       aeson                        >= 0.4  && < 0.10,
                        authenticate                 == 1.3.*,
                        base64-bytestring            >= 1.0  && < 1.1,
                        boomerang                    >= 1.4  && < 1.5,
@@ -65,7 +65,7 @@ Library
                        safecopy                     >= 0.8  && < 0.9,
                        mime-mail                    >= 0.4  && < 0.5,
                        mtl                          >= 2.0  && < 2.3,
-                       lens                         >= 4.2  && < 4.10,
+                       lens                         >= 4.2  && < 4.13,
                        pwstore-purehaskell          == 2.1.*,
                        text                         >= 0.11 && < 1.3,
                        time                         >= 1.2  && < 1.6,
