Index: haskell-happstack/happstack-clientsession.cabal
===================================================================
--- haskell-happstack.orig/happstack-clientsession.cabal
+++ haskell-happstack/happstack-clientsession.cabal
@@ -26,8 +26,8 @@ Library
     bytestring        >= 0.9 && < 0.11,
     cereal            >= 0.3 && < 0.5,
     clientsession     >= 0.8 && < 0.10,
-    happstack-server  >= 7.0 && < 7.4,
-    monad-control     == 0.3.*,
+    happstack-server  >= 7.0 && < 7.5,
+    monad-control     == 1.0.*,
     mtl               >= 2.0 && < 2.3,
     safecopy          >= 0.7 && < 0.9,
     transformers-base == 0.4.*
