Index: haskell-happstack/happstack-hamlet.cabal
===================================================================
--- haskell-happstack.orig/happstack-hamlet.cabal
+++ haskell-happstack/happstack-hamlet.cabal
@@ -25,7 +25,7 @@ source-repository head
 Library
   Exposed-modules:     Happstack.Server.Hamlet
   Build-depends:       base             >= 3   && < 5,
-                       happstack-server >= 6.0 && < 7.4,
+                       happstack-server >= 6.0 && < 7.5,
                        shakespeare      >= 2.0 && < 2.1,
                        text
 
