Index: haskell-happstack/happstack-hstringtemplate.cabal
===================================================================
--- haskell-happstack.orig/happstack-hstringtemplate.cabal
+++ haskell-happstack/happstack-hstringtemplate.cabal
@@ -22,9 +22,9 @@ Library
   Exposed-modules:     Happstack.Server.HStringTemplate
   Build-depends:       base >= 3.0 && < 5.0,
                        bytestring,
-                       happstack-server >= 6.0 && < 7.4,
+                       happstack-server >= 6.0 && < 7.5,
                        hslogger,
-                       HStringTemplate >= 0.4.3 && < 0.8,
+                       HStringTemplate >= 0.4.3 && < 0.9,
                        mtl >= 1.1 && < 2.3
 
 
