Index: haskell-happstack/happstack-server-tls.cabal
===================================================================
--- haskell-happstack.orig/happstack-server-tls.cabal
+++ haskell-happstack/happstack-server-tls.cabal
@@ -25,12 +25,10 @@ Library
                        happstack-server      >= 6.6.4 && < 7.4,
                        hslogger              >=  1.1 && < 1.3,
                        HsOpenSSL             == 0.10.*,
-                       network               >= 2.3 && < 2.5,
+                       network               >= 2.3 && < 2.6,
                        sendfile              == 0.7.*,
                        time                  >= 1.2 && < 1.5
     Extra-Libraries:   ssl
-    if !os(darwin)
-        Extra-Libraries: cryptopp
 
     if !os(windows)
        Build-Depends:  unix
