Index: haskell-happstack/happstack-server-tls.cabal
===================================================================
--- haskell-happstack.orig/happstack-server-tls.cabal
+++ haskell-happstack/happstack-server-tls.cabal
@@ -24,7 +24,7 @@ Library
                        extensible-exceptions == 0.1.*,
                        happstack-server      >= 6.6.4 && < 7.4,
                        hslogger              >=  1.1 && < 1.3,
-                       HsOpenSSL             == 0.10.*,
+                       HsOpenSSL             >= 0.10 && < 0.12,
                        network               >= 2.3 && < 2.6,
                        sendfile              == 0.7.*,
                        time                  >= 1.2 && < 1.5
@@ -32,8 +32,6 @@ Library
     -- but they do need to be installed if you want to use GHCi or
     -- Template Haskell afterwards
     Extra-Libraries:   ssl
-    if !os(darwin)
-        Extra-Libraries: cryptopp
 
     if !os(windows)
        Build-Depends:  unix
