Index: haskell-happstack/happstack-server-tls.cabal
===================================================================
--- haskell-happstack.orig/happstack-server-tls.cabal
+++ haskell-happstack/happstack-server-tls.cabal
@@ -32,9 +32,6 @@ Library
     -- but they do need to be installed if you want to use GHCi or
     -- Template Haskell afterwards
     Extra-Libraries:   ssl
-    if !os(darwin)
-        Extra-Libraries: cryptopp
-
     if !os(windows)
        Build-Depends:  unix
        cpp-options:    -DUNIX
