Index: haskell-happstack/happstack-server.cabal
===================================================================
--- haskell-happstack.orig/happstack-server.cabal
+++ haskell-happstack/happstack-server.cabal
@@ -83,7 +83,7 @@ Library
                        filepath,
                        hslogger >= 1.0.2,
                        html,
-                       monad-control >= 0.3 && < 0.4,
+                       monad-control == 1.0.*,
                        mtl >= 2 && < 2.3,
                        old-locale,
                        parsec < 4,
