Index: haskell-happstack/haskell-src-meta.cabal
===================================================================
--- haskell-happstack.orig/haskell-src-meta.cabal
+++ haskell-happstack/haskell-src-meta.cabal
@@ -21,8 +21,8 @@ library
   build-depends:   base >= 4.5 && < 4.9,
                    haskell-src-exts == 1.16.*,
                    pretty >= 1.0 && < 1.2,
-                   syb >= 0.1 && < 0.5,
-                   th-orphans >= 0.9.1 && < 0.12
+                   syb >= 0.1 && < 0.6,
+                   th-orphans >= 0.9.1 && < 0.13
 
   Build-depends: template-haskell >= 2.7 && < 2.11
 
