Index: haskell-happstack/hoauth2.cabal
===================================================================
--- haskell-happstack.orig/hoauth2.cabal
+++ haskell-happstack/hoauth2.cabal
@@ -64,7 +64,6 @@ Library
     bytestring-show   >= 0.3.5  && < 0.4,
     http-conduit      >= 2.0    && < 2.2,
     http-types        >= 0.8    && < 0.9,
-    monad-control     >= 0.3    && < 0.4,
     mtl               >= 1      && < 2.3,
     transformers      >= 0.2    && < 0.5,
     random
