Index: haskell-happstack/hoauth2.cabal
===================================================================
--- haskell-happstack.orig/hoauth2.cabal
+++ haskell-happstack/hoauth2.cabal
@@ -60,7 +60,7 @@ Library
     base              >= 4      && < 5,
     aeson             >= 0.7    && < 0.9,
     text              >= 0.11   && < 1.3,
-    bytestring        >= 0.10.4 && < 0.10.5,
+    bytestring        >= 0.10.4 && < 0.10.7,
     http-conduit      >= 2.0    && < 2.2,
     http-types        >= 0.8    && < 0.9
 
