Index: haskell-happstack/ircbot.cabal
===================================================================
--- haskell-happstack.orig/ircbot.cabal
+++ haskell-happstack/ircbot.cabal
@@ -41,11 +41,11 @@ Library
                   filepath   >= 1.2  && < 1.4,
                   irc        == 0.6.*,
                   mtl        >= 2.0  && < 2.3,
-                  network    >= 2.3  && < 2.6,
+                  network    >= 2.3  && < 2.7,
                   old-locale == 1.0.*,
                   parsec     == 3.1.*,
                   time       == 1.4.*,
                   unix       >= 2.4  && < 2.8,
-                  random     == 1.0.*,
+                  random     >= 1.0  && < 1.2,
                   stm        >= 2.2  && < 2.5,
                   SafeSemaphore >= 0.10 && < 0.11
