Index: haskell-happstack/network-simple.cabal
===================================================================
--- haskell-happstack.orig/network-simple.cabal
+++ haskell-happstack/network-simple.cabal
@@ -34,7 +34,7 @@ library
   exposed-modules:   Network.Simple.TCP
   other-modules:     Network.Simple.Internal
   build-depends:     base         (>=4.5 && < 5)
-                   , network      (>=2.3 && <2.6)
+                   , network      (>=2.3 && <2.7)
                    , bytestring   (>=0.9.2.1 && <0.11)
                    , transformers (>=0.2 && <0.5)
                    -- Packages not in The Haskell Platform
