Index: haskell-happstack/network-simple.cabal
===================================================================
--- haskell-happstack.orig/network-simple.cabal
+++ haskell-happstack/network-simple.cabal
@@ -38,4 +38,4 @@ library
                    , bytestring   (>=0.9.2.1 && <0.11)
                    , transformers (>=0.2 && <0.5)
                    -- Packages not in The Haskell Platform
-                   , exceptions   (>=0.6 && <0.8)
+                   , exceptions   (>=0.6 && <0.9)
