Index: haskell-happstack/pipes-aeson.cabal
===================================================================
--- haskell-happstack.orig/pipes-aeson.cabal
+++ haskell-happstack/pipes-aeson.cabal
@@ -30,8 +30,8 @@ library
                    Pipes.Aeson.Unsafe
   other-modules:   Pipes.Aeson.Internal
   build-depends:
-      aeson            (>=0.6.1 && < 0.7)
-    , attoparsec       (>=0.10  && <0.11)
+      aeson            (>=0.6.1 && < 0.8)
+    , attoparsec       (>=0.10  && <0.12)
     , base             (>=4.5   && <5.0)
     , pipes            (>=4.0   && <4.1)
     , pipes-attoparsec (>=0.3   && <0.4)
