Index: haskell-happstack/pipes-aeson.cabal
===================================================================
--- haskell-happstack.orig/pipes-aeson.cabal
+++ haskell-happstack/pipes-aeson.cabal
@@ -30,7 +30,7 @@ library
                    Pipes.Aeson.Unchecked
   other-modules:   Pipes.Aeson.Internal
   build-depends:
-      aeson            (>=0.6.1 && <0.10)
+      aeson            (>=0.6.1 && <0.11)
     , attoparsec       (>=0.10  && <0.14)
     , base             (>=4.5   && <5.0)
     , pipes            (>=4.1   && <4.2)
