Index: haskell-happstack/pipes-extras.cabal
===================================================================
--- haskell-happstack.orig/pipes-extras.cabal
+++ haskell-happstack/pipes-extras.cabal
@@ -22,7 +22,7 @@ Library
         base         >= 4       && < 5  ,
         pipes        >= 4.0     && < 4.2,
         foldl        >= 1.0.1   && < 1.1,
-        transformers >= 0.2.0.0 && < 0.4
+        transformers >= 0.2.0.0 && < 0.5
     Exposed-Modules: Pipes.Extras
     GHC-Options: -O2 -Wall
     Default-Language: Haskell2010
@@ -41,4 +41,4 @@ test-suite tests
         test-framework             >= 0.4     && < 1   ,
         test-framework-hunit       >= 0.3     && < 1   ,
         HUnit                      >= 1.2     && < 1.3 ,
-        transformers               >= 0.2.0.0 && < 0.4
+        transformers               >= 0.2.0.0 && < 0.5
