Index: haskell-happstack/pipes-http.cabal
===================================================================
--- haskell-happstack.orig/pipes-http.cabal
+++ haskell-happstack/pipes-http.cabal
@@ -21,7 +21,7 @@ Library
         base             >= 4       && < 5   ,
         bytestring       >= 0.9.2.1 && < 0.11,
         pipes            >= 4.0     && < 4.2 ,
-        http-client      >= 0.2     && < 0.4 ,
+        http-client      >= 0.2     && < 0.5 ,
         http-client-tls                < 0.3
     Exposed-Modules: Pipes.HTTP
     GHC-Options: -O2 -Wall
