Index: haskell-happstack/reform-blaze.cabal
===================================================================
--- haskell-happstack.orig/reform-blaze.cabal
+++ haskell-happstack/reform-blaze.cabal
@@ -23,7 +23,7 @@ Library
                      Text.Reform.Blaze.Text
 
   Build-depends:     base         >4 && <5,
-                     blaze-markup >= 0.5 && < 0.7,
-                     blaze-html   >= 0.5 && < 0.8,
+                     blaze-markup >= 0.5 && < 0.8,
+                     blaze-html   >= 0.5 && < 0.9,
                      reform       == 0.2.*,
                      text         >= 0.11 && < 1.3
