Index: haskell-happstack/reform-happstack.cabal
===================================================================
--- haskell-happstack.orig/reform-happstack.cabal
+++ haskell-happstack/reform-happstack.cabal
@@ -21,7 +21,7 @@ Library
   Exposed-modules:     Text.Reform.Happstack
   Build-depends:       base >4 && <5,
                        bytestring       >= 0.9 && < 0.11,
-                       happstack-server >= 7.0 && < 7.4,
+                       happstack-server >= 7.0 && < 7.5,
                        mtl              >= 2.0 && < 2.3,
                        random           >= 1.0 && < 1.2,
                        reform           == 0.2.*,
