Index: haskell-happstack/reform-happstack.cabal
===================================================================
--- haskell-happstack.orig/reform-happstack.cabal
+++ haskell-happstack/reform-happstack.cabal
@@ -21,10 +21,10 @@ Library
   Exposed-modules:     Text.Reform.Happstack
   Build-depends:       base >4 && <5,
                        bytestring       >= 0.9 && < 0.11,
-                       happstack-server >= 7.0 && < 7.4,
+                       happstack-server >= 7.0 && < 7.5,
                        mtl              >= 2.0 && < 2.3,
                        random           >= 1.0 && < 1.2,
                        reform           == 0.2.*,
                        text             >= 0.11 && < 1.3,
-                       utf8-string      == 0.3.*
+                       utf8-string      >= 0.3 && < 1.1
 --  Build-tools:         trhsx
\ No newline at end of file
