Index: haskell-happstack/safecopy.cabal
===================================================================
--- haskell-happstack.orig/safecopy.cabal
+++ haskell-happstack/safecopy.cabal
@@ -56,7 +56,7 @@ Library
 
   -- Packages needed in order to build this package.
   Build-depends:       base >=4.5 && <5, array, cereal >= 0.3.1.0, bytestring, containers >= 0.3,
-                       old-time, template-haskell, text, time, vector == 0.10.*
+                       old-time, template-haskell, text, time, vector >= 0.10 && < 0.12
 
   -- Modules not exported by this package.
   Other-modules:       Data.SafeCopy.Instances, Data.SafeCopy.SafeCopy,
