Index: haskell-happstack/skein.cabal
===================================================================
--- haskell-happstack.orig/skein.cabal
+++ haskell-happstack/skein.cabal
@@ -78,7 +78,7 @@ Library
         bytestring   >= 0.9,
         cereal       >= 0.3 && < 0.5,
         tagged       >= 0.2 && < 0.8,
-        crypto-api   >= 0.6 && < 0.13
+        crypto-api   >= 0.6 && < 0.14
 
     Build-tools: hsc2hs
     GHC-options: -Wall
