Index: tables-0.3.1/tables.cabal
===================================================================
--- tables-0.3.1.orig/tables.cabal
+++ tables-0.3.1/tables.cabal
@@ -44,7 +44,7 @@ flag transformers2
 library
   build-depends:
     base                 >= 4.3 && < 5,
-    binary               >= 0.5 && < 0.6,
+    binary               >= 0.5 && < 0.8,
     cereal               >= 0.3 && < 0.4,
     comonad              >= 3   && < 4,
     containers           >= 0.4 && < 0.6,
